# conan-test

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.am  README.md  VERSIONS.md  aclocal.m4  cleanup  conanfile.py  configure  configure.ac  main.cpp  meson.build  meson_options.txt  mvrnorm.hpp
include/: meson.build
src/: mvrnorm.hpp
tests/: .gitignore  meson.build  test.cpp
tests/.deps/: cstat_tests-test.Po
